--- a/decode_L1.ipynb
+++ b/decode_L1.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "51c4374b-8268-4b40-b446-e2765b61a9a8",
    "metadata": {},
    "outputs": [],
@@ -35,27 +35,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "d677ff57-73b5-49e2-897c-759d71f33b3a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# add functions\n",
-    "%run fnc_decode_L1.py"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9e98048d-37b9-4ff0-b060-da39eceef856",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def update_progress(progress, total):\n",
-    "    bar_length = 20  # Adjust this for desired bar length\n",
-    "    filled_length = int(round(progress / total * bar_length))\n",
-    "    bar = '=' * filled_length + '-' * (bar_length - filled_length)\n",
-    "    print(f'Progress: [{bar}] {progress}/{total}', end='\\r')"
+    "# add decoding function\n",
+    "%run fnc_fit_and_score.ipynb\n",
+    "%run fnc_decode_L1.ipynb\n"
    ]
   },
   {
@@ -65,8 +52,97 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# MODIFY HERE - inputs\n",
+    "\n",
     "# What are we decoding?\n",
-    "\n"
+    "RNN_params = {}\n",
+    "RNN_params['prb_split'] = '70_30'\n",
+    "RNN_params['afc'] = 2\n",
+    "RNN_params['coh'] = 'hi'\n",
+    "RNN_params['feedback'] = False\n",
+    "RNN_params['thresh'] = [.3,.7]\n",
+    "\n",
+    "# Decoding params\n",
+    "D_Params = {}\n",
+    "D_params['time_avg'] = False\n",
+    "D_params['t_win'] = [200,-1]\n",
+    "D_params['n_cvs'] = 5\n",
+    "D_params['num_cgs'] = 30\n",
+    "D_params['label'] = 'stim' # 'stim' or 'choice'\n",
+    "\n",
+    "# Load data\n",
+    "if sys.platform.startswith('linux'):\n",
+    "    data_dir = f\"/mnt/neurocube/local/serenceslab/holly/RNN_Geo/data/rdk_{prob_split}_{afc}afc/feedforward_only/{coh}_coh\"\n",
+    "else:\n",
+    "    data_dir = f\"/Volumes/serenceslab/holly/RNN_Geo/data/rdk_{prob_split}_{afc}afc/feedforward_only/{coh}_coh\"\n",
+    "\n",
+    "# Change this if we want a different number of trials and different default stim (0 is the one RNN was trained on)\n",
+    "data_file = f\"{data_dir}/Trials200_0expected.npz\"\n",
+    "\n",
+    "# Timing of task\n",
+    "task_info = {}\n",
+    "task_info['trials'] = 200\n",
+    "task_info['trial_dur'] = 250  # trial duration (timesteps)\n",
+    "task_info['stim_on'] = 80\n",
+    "task_info['stim_dur'] = 50\n",
+    "\n",
+    "save_plt = False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "316dae33-a0e3-49f0-824a-1c8054c73b73",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Do decoding\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5856499d-4ba9-4056-ac3f-6363d2740189",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Make plots based on outputs\n",
+    "\n",
+    "# Plot decoding accuracy over time\n",
+    "plt.figure()\n",
+    "plt.plot(range(task_info['trial_dur']), decoding_acc)\n",
+    "plt.xlabel('Time Step')\n",
+    "plt.ylabel('Decoding Accuracy')\n",
+    "plt.title('Decoding Accuracy Over Time')\n",
+    "plt.axvspan(task_info['stim_on'], task_info['stim_on']+task_info['stim_dur'], color = 'gray', alpha = 0.3)\n",
+    "if save_plt:\n",
+    "    plt.savefig(f\"{data_dir}/decode_stim_exp.png\")\n",
+    "plt.show()  \n",
+    "\n",
+    "\n",
+    "# fit logistic function\n",
+    "def logistic_func(x, a, b, c, d):\n",
+    "    return a / (1 + np.exp(-c * (x - d))) + b\n",
+    "\n",
+    "popt, _ = curve_fit(logistic_func, range(0, task_info['trial_dur']), decoding_acc[0:])\n",
+    "\n",
+    "# 'popt' will contain the fitted parameters (a, b, c) of the log function\n",
+    "\n",
+    "# Optional: Estimate the y-value of the asymptote (assuming based on parameter b)\n",
+    "asymptote_y = popt[1]\n",
+    "print(\"Estimated y-value of the asymptote:\", asymptote_y)\n",
+    "\n",
+    "# Optional: Visualization\n",
+    "plt.plot(range(0, task_info['trial_dur']), decoding_acc[0:], label='Data')\n",
+    "plt.plot(range(0, task_info['trial_dur']), logistic_func(range(0, task_info['trial_dur']), *popt), label=f'y asymptote of logistic {round(asymptote_y, 3)}')\n",
+    "plt.axvspan(task_info['stim_on'], task_info['stim_on']+task_info['stim_dur'], color = 'gray', alpha = 0.3)\n",
+    "plt.xlabel('Time Step')\n",
+    "plt.ylabel('Decoding Accuracy')\n",
+    "plt.title('Decoding Accuracy Over Time (Logistic Fit)')\n",
+    "plt.legend()\n",
+    "if save_plt:\n",
+    "    plt.savefig(f\"{data_dir}/decode_stim_expfit.png\")\n",
+    "plt.show()\n"
    ]
   }
  ],
