--- a/decode_L1_excvsinh.ipynb
+++ b/decode_L1_excvsinh.ipynb
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "b585d928-bf9e-46a9-a2ba-d77873aa5bb4",
    "metadata": {},
    "outputs": [],
@@ -71,7 +71,7 @@
     "thresh = [ 0.3,0.7 ] # threshold for whether stim 1 or other\n",
     "\n",
     "# decode opts\n",
-    "time_avg = False # do we want to look at average over time window?\n",
+    "time_avg = True # do we want to look at average over time window?\n",
     "if time_avg:\n",
     "    t_win = [ 200,-1 ]\n",
     "n_cvs = 5\n",
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "9a68920d-f067-4e10-a8f1-158f6f447bee",
    "metadata": {},
    "outputs": [],
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "15cbee79-c20b-42c8-bce0-55251828c482",
    "metadata": {},
    "outputs": [],
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "3a855d1f-2c58-4e06-9cf8-798f988722ac",
    "metadata": {},
    "outputs": [
@@ -172,7 +172,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Progress: [====================] 1250/1250\n",
+      "CV: 0, SVC(C=3.856620421163472, class_weight='balanced', kernel='linear')\n",
+      "CV: 1, SVC(C=6.2101694189156165, class_weight='balanced', kernel='linear')\n",
+      "CV: 2, SVC(C=3.856620421163472, class_weight='balanced', kernel='linear')\n",
+      "CV: 3, SVC(C=0.5736152510448681, class_weight='balanced', kernel='linear')\n",
+      "CV: 4, SVC(C=0.9236708571873865, class_weight='balanced', kernel='linear')\n",
       "done decoding\n"
      ]
     }
@@ -180,7 +184,7 @@
    "source": [
     "# Do decoding\n",
     "if time_avg:\n",
-    "       \n",
+    "    data_d = np.mean( data_d[ :,t_win[0]:t_win[1],: ], axis = 1 ) # average over time window   \n",
     "        # Within each cross-validation fold\n",
     "    for i in range(n_cvs):\n",
     "\n",
@@ -376,7 +380,7 @@
    "source": [
     "# Do decoding\n",
     "if time_avg:\n",
-    "       \n",
+    "    data_d = np.mean( data_d[ :,t_win[0]:t_win[1],: ], axis = 1 ) # average over time window   \n",
     "        # Within each cross-validation fold\n",
     "    for i in range(n_cvs):\n",
     "\n",
