--- a/decode_L1_expectedvsunexpected.ipynb
+++ b/decode_L1_expectedvsunexpected.ipynb
@@ -176,7 +176,7 @@
    "source": [
     "# Do decoding\n",
     "if time_avg:\n",
-    "       \n",
+    "    data_d = np.mean( data_d[ :,t_win[0]:t_win[1],: ], axis = 1 ) # average over time window   \n",
     "        # Within each cross-validation fold\n",
     "    for i in range(n_cvs):\n",
     "\n",
@@ -371,7 +371,7 @@
    "source": [
     "# Do decoding\n",
     "if time_avg:\n",
-    "       \n",
+    "    data_d = np.mean( data_d[ :,t_win[0]:t_win[1],: ], axis = 1 ) # average over time window  \n",
     "        # Within each cross-validation fold\n",
     "    for i in range(n_cvs):\n",
     "\n",
