add descrip to fnc

--- a/decode_L1.ipynb
+++ b/decode_L1.ipynb
@@ -35,14 +35,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "d677ff57-73b5-49e2-897c-759d71f33b3a",
    "metadata": {},
    "outputs": [],
    "source": [
     "# add decoding function\n",
-    "%run fnc_fit_and_score.ipynb\n",
-    "%run fnc_decode_L1.ipynb\n"
+    "import fnc_fit_and_score\n",
+    "#%run fnc_decode_L1.ipynb\n"
    ]
   },
   {
