--- a/fnc_decode_L1.ipynb
+++ b/fnc_decode_L1.ipynb
@@ -1,41 +1,6 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "id": "290d8cb1-c449-4aa8-bbd7-d60118163356",
-   "metadata": {},
-   "source": [
-    "Name: Holly Kular\\\n",
-    "Date: 03-19-2024\\\n",
-    "Email: hkular@ucsd.edu\\\n",
-    "fnc_decode_L1.py\\\n",
-    "Description: Script for decoding analysis on layer 1 of probabilistic RNN"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "f5442b04-07b5-4acc-afb4-8c9996aa971a",
-   "metadata": {},
-   "source": [
-    "INPUT\\\n",
-    "RNN_params (dict)\n",
-    "   - prob_split: what was the split of the dominant stim vs all (default '70_30')\n",
-    "   - afc: number of alternatives (2 or 6) (default 2)\n",
-    "   - coh: what was the coherence of RDK (default 'hi')\n",
-    "   - feedback: interlayer feedback (true or false) (default false)\n",
-    "   - thresh: the threshold to label RNN output (default [.3, .7])\n",
-    "\n",
-    "D_params (dict)\n",
-    "   - time_avg: whether we want decoding averaged over time or not (true or false) (default false)\n",
-    "   - t_win: what time window to average over if time_avg = true (default [200,-1])\n",
-    "   - n_cvs: cross validation folds (default 5)\n",
-    "   - num_cgs: penalties to eval (default 30)\n",
-    "\n",
-    "data_file: file path for Trials that we want to load\n",
-    "    "
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "id": "b585d928-bf9e-46a9-a2ba-d77873aa5bb4",
@@ -43,7 +8,29 @@
    "outputs": [],
    "source": [
     "def fnc_decode_L1(RNN_params, D_params, data_file, task_info):\n",
+    "    '''\n",
+    "Name: Holly Kular\n",
+    "Date: 03-19-2024\n",
+    "Email: hkular@ucsd.edu\n",
+    "fnc_decode_L1.py\n",
+    "Description: Script for decoding analysis on layer 1 of probabilistic RNN\n",
     "\n",
+    "    INPUT\n",
+    "    RNN_params (dict)\n",
+    "       - prob_split: what was the split of the dominant stim vs all (default '70_30')\n",
+    "       - afc: number of alternatives (2 or 6) (default 2)\n",
+    "       - coh: what was the coherence of RDK (default 'hi')\n",
+    "       - feedback: interlayer feedback (true or false) (default false)\n",
+    "       - thresh: the threshold to label RNN output (default [.3, .7])\n",
+    "\n",
+    "    D_params (dict)\n",
+    "       - time_avg: whether we want decoding averaged over time or not (true or false) (default false)\n",
+    "       - t_win: what time window to average over if time_avg = true (default [200,-1])\n",
+    "       - n_cvs: cross validation folds (default 5)\n",
+    "       - num_cgs: penalties to eval (default 30)\n",
+    "\n",
+    "    data_file: file path for Trials that we want to load\n",
+    "    '''\n",
     "    # set up defaults\n",
     "    prob_split = RNN_params.get('prb_split', '70_30')\n",
     "    afc = RNN_params.get('afc', 2)\n",
