bug - return decoding_acc

--- a/decode_L1.ipynb
+++ b/decode_L1.ipynb
@@ -35,14 +35,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "d677ff57-73b5-49e2-897c-759d71f33b3a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (fnc_decode_L1.py, line 89)",
+     "output_type": "error",
+     "traceback": [
+      "Traceback \u001b[0;36m(most recent call last)\u001b[0m:\n",
+      "  File \u001b[1;32m\"/Users/hkular/opt/anaconda3/lib/python3.8/site-packages/IPython/core/interactiveshell.py\"\u001b[0m, line \u001b[1;32m3437\u001b[0m, in \u001b[1;35mrun_code\u001b[0m\n    exec(code_obj, self.user_global_ns, self.user_ns)\n",
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-3-06d89cb24ff1>\"\u001b[0;36m, line \u001b[0;32m3\u001b[0;36m, in \u001b[0;35m<module>\u001b[0;36m\u001b[0m\n\u001b[0;31m    import fnc_decode_L1\u001b[0m\n",
+      "\u001b[0;36m  File \u001b[0;32m\"/Volumes/serenceslab/holly/RNN_Geo/fnc_decode_L1.py\"\u001b[0;36m, line \u001b[0;32m89\u001b[0m\n\u001b[0;31m    return decoding_acc = np.mean( acc )\u001b[0m\n\u001b[0m                        ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
-    "# add decoding function\n",
+    "# add decoding functions\n",
     "import fnc_fit_and_score\n",
-    "#%run fnc_decode_L1.ipynb\n"
+    "import fnc_decode_L1\n"
    ]
   },
   {
