--- a/decode_L1.ipynb
+++ b/decode_L1.ipynb
@@ -35,31 +35,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "d677ff57-73b5-49e2-897c-759d71f33b3a",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (fnc_decode_L1.py, line 89)",
-     "output_type": "error",
-     "traceback": [
-      "Traceback \u001b[0;36m(most recent call last)\u001b[0m:\n",
-      "  File \u001b[1;32m\"/Users/hkular/opt/anaconda3/lib/python3.8/site-packages/IPython/core/interactiveshell.py\"\u001b[0m, line \u001b[1;32m3437\u001b[0m, in \u001b[1;35mrun_code\u001b[0m\n    exec(code_obj, self.user_global_ns, self.user_ns)\n",
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-3-06d89cb24ff1>\"\u001b[0;36m, line \u001b[0;32m3\u001b[0;36m, in \u001b[0;35m<module>\u001b[0;36m\u001b[0m\n\u001b[0;31m    import fnc_decode_L1\u001b[0m\n",
-      "\u001b[0;36m  File \u001b[0;32m\"/Volumes/serenceslab/holly/RNN_Geo/fnc_decode_L1.py\"\u001b[0;36m, line \u001b[0;32m89\u001b[0m\n\u001b[0;31m    return decoding_acc = np.mean( acc )\u001b[0m\n\u001b[0m                        ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# add decoding functions\n",
-    "import fnc_fit_and_score\n",
-    "import fnc_decode_L1\n"
+    "from fnc_fit_and_score import fnc_fit_and_score\n",
+    "from fnc_decode_L1 import fnc_decode_L1\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "b974490f-888e-41e9-8cdf-15bf74564495",
    "metadata": {},
    "outputs": [],
@@ -68,14 +56,14 @@
     "\n",
     "# What are we decoding?\n",
     "RNN_params = {}\n",
-    "RNN_params['prb_split'] = '70_30'\n",
+    "RNN_params['prob_split'] = '70_30'\n",
     "RNN_params['afc'] = 2\n",
     "RNN_params['coh'] = 'hi'\n",
     "RNN_params['feedback'] = False\n",
     "RNN_params['thresh'] = [.3,.7]\n",
     "\n",
     "# Decoding params\n",
-    "D_Params = {}\n",
+    "D_params = {}\n",
     "D_params['time_avg'] = False\n",
     "D_params['t_win'] = [200,-1]\n",
     "D_params['n_cvs'] = 5\n",
@@ -84,9 +72,9 @@
     "\n",
     "# Load data\n",
     "if sys.platform.startswith('linux'):\n",
-    "    data_dir = f\"/mnt/neurocube/local/serenceslab/holly/RNN_Geo/data/rdk_{prob_split}_{afc}afc/feedforward_only/{coh}_coh\"\n",
+    "    data_dir = f\"/mnt/neurocube/local/serenceslab/holly/RNN_Geo/data/rdk_{RNN_params['prob_split']}_{RNN_params['afc']}afc/feedforward_only/{RNN_params['coh']}_coh\"\n",
     "else:\n",
-    "    data_dir = f\"/Volumes/serenceslab/holly/RNN_Geo/data/rdk_{prob_split}_{afc}afc/feedforward_only/{coh}_coh\"\n",
+    "    data_dir = f\"/Volumes/serenceslab/holly/RNN_Geo/data/rdk_{RNN_params['prob_split']}_{RNN_params['afc']}afc/feedforward_only/{RNN_params['coh']}_coh\"\n",
     "\n",
     "# Change this if we want a different number of trials and different default stim (0 is the one RNN was trained on)\n",
     "data_file = f\"{data_dir}/Trials200_0expected.npz\"\n",
@@ -103,12 +91,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "316dae33-a0e3-49f0-824a-1c8054c73b73",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Do decoding\n"
+    "# Do decoding\n",
+    "acc = fnc_decode_L1(RNN_params, D_params, data_file, task_info)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "375bf080-bfc0-4191-823c-c581f5e4452d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "nan"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "acc"
    ]
   },
   {
