--- a/sandbox.ipynb
+++ b/sandbox.ipynb
@@ -2,15 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "id": "008d1b4d-0315-41c2-b2c6-ad845afb47af",
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Decoding Progress:   0%|                                | 0/250 [01:17<?, ?it/s]\n"
+      "done decoding\n"
      ]
     }
    ],
@@ -19,7 +19,6 @@
     "\n",
     "# import these are all needed for fnc\n",
     "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
     "import sys\n",
     "import os\n",
     "from fnc_fit_and_score import fnc_fit_and_score\n",
@@ -29,8 +28,10 @@
     "from sklearn.model_selection import GridSearchCV\n",
     "from sklearn.datasets import make_classification\n",
     "from scipy.optimize import curve_fit\n",
-    "import multiprocessing\n",
-    "from tqdm import tqdm \n",
+    "from multiprocessing import Pool\n",
+    "\n",
+    "import time\n",
+    "\n",
     "# what are we decoding\n",
     "RNN_params = {}\n",
     "RNN_params['prob_split'] = '70_30'\n",
@@ -102,7 +103,7 @@
     "decoding_acc = np.nan\n",
     "\n",
     "\n",
-    "\n",
+    "#start_time = time.time()\n",
     "if __name__ == \"__main__\":\n",
     "    pool = Pool(processes=round(os.cpu_count() * .7))\n",
     "    with pool:  # use 70% of cpus\n",
@@ -112,16 +113,11 @@
     "        ], chunksize = 10)\n",
     "\n",
     "    # Process the results from each worker process (list of lists of accuracies)\n",
-    "    decoding_acc = np.mean(np.array(results), axis=1)  # Calculate mean accuracy for each time step\n"
+    "    decoding_acc = np.mean(np.array(results), axis=1)  # Calculate mean accuracy for each time step\n",
+    "\n",
+    "#end_time = time.time()\n",
+    "print(f'done decoding')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "631ab11a-5978-4fee-8539-1e5c8c873c93",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
