loop over conds

--- a/generate_trials.ipynb
+++ b/generate_trials.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "8cb3d0a8-3df1-4528-97d5-1f58aa828384",
    "metadata": {
     "tags": []
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "id": "db89de4a-c316-4a51-92aa-b38035d8c07c",
    "metadata": {
     "tags": []
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 35,
    "id": "7976c144-c21b-46ed-a802-0f5f756f2c36",
    "metadata": {
     "tags": []
@@ -59,13 +59,13 @@
     "# what conditions were the RNNs trained on?\n",
     "prob_split = '70_30' # the probability of stimulus 1 vs all\n",
     "afc = '6' # number of alternatives\n",
-    "coh = 'lo' # coherence\n",
+    "coh = 'hi' # coherence\n",
     "feedback = False # interlayer feedback (true or false)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 44,
    "id": "f1d1c2ef-004a-4c2c-8a0b-5fb51956d998",
    "metadata": {
     "tags": []
@@ -82,12 +82,12 @@
     "mat_files = [f for f in os.listdir(data_dir) if f.endswith('.mat')]\n",
     "\n",
     "# Choose one model as an example\n",
-    "model_path = os.path.join(data_dir, mat_files[1])"
+    "model_path = os.path.join(data_dir, mat_files[2])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 48,
    "id": "e806835c-613d-44aa-9f41-ac8d9b1d35ae",
    "metadata": {
     "tags": []
@@ -96,7 +96,7 @@
    "source": [
     "# **Testing task condition \n",
     "task_info = {}\n",
-    "task_info['trials'] = 200\n",
+    "task_info['trials'] = 1000\n",
     "task_info['trial_dur'] = 250  # trial duration (timesteps)\n",
     "task_info['stim_on'] = 80\n",
     "task_info['stim_dur'] = 50\n",
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 49,
    "id": "21389ae2-6159-4f55-bbc8-a25136a6beb1",
    "metadata": {
     "tags": []
@@ -156,14 +156,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 50,
    "id": "0ec6874e-4b69-4fb5-9fa8-f6dc484cacb2",
    "metadata": {},
    "outputs": [],
    "source": [
     "# save trial data to load into other notebooks\n",
-    "today = datetime.now().strftime(\"%y%m%d\")\n",
-    "full_file = os.path.join(data_dir, f\"Trials200_0expected.npz\")\n",
+    "full_file = os.path.join(data_dir, f\"Trials{task_info['trials']}_model{model_path[-7:-4]}_{task_info['pred']}expected.npz\")\n",
     "np.savez(full_file,fr1 = fr1, fr2=fr2, fr3=fr3, outs=outs, labs=labs, task_info=task_info)"
    ]
   },
