--- a/decode_L1-loop.ipynb
+++ b/decode_L1-loop.ipynb
@@ -9,12 +9,13 @@
     "Date: 03-19-2024\\\n",
     "Email: hkular@ucsd.edu\\\n",
     "decode_L1.m\\\n",
-    "Description: wrapper script for decoding analysis on layer 1 of probabilistic RNN"
+    "Description: wrapper script for decoding analysis on layer 1 of probabilistic RNN\\\n",
+    "5-1-2024 update: loop over conditions"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "id": "51c4374b-8268-4b40-b446-e2765b61a9a8",
    "metadata": {},
    "outputs": [],
@@ -30,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "id": "d677ff57-73b5-49e2-897c-759d71f33b3a",
    "metadata": {},
    "outputs": [],
@@ -42,97 +43,80 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "b4cfb003-4906-4e7e-943f-1b88c6e65250",
+   "execution_count": 10,
+   "id": "2a73c1ae-ff2f-432d-9c61-f841988aa888",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Change this\n",
-    "save_plt = True"
+    "# create condition table\n",
+    "cohs = ['hi', 'lo']\n",
+    "afcs = [2, 6]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
-   "id": "b974490f-888e-41e9-8cdf-15bf74564495",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# MODIFY HERE - inputs\n",
-    "\n",
-    "# What are we decoding?\n",
-    "RNN_params = {}\n",
-    "RNN_params['prob_split'] = '70_30'\n",
-    "RNN_params['afc'] = 6\n",
-    "RNN_params['coh'] = 'lo'\n",
-    "RNN_params['feedback'] = False\n",
-    "RNN_params['thresh'] = [.3,.7]\n",
-    "\n",
-    "# Decoding params\n",
-    "D_params = {}\n",
-    "D_params['time_avg'] = False\n",
-    "D_params['t_win'] = [200,-1]\n",
-    "D_params['n_cvs'] = 5\n",
-    "D_params['num_cgs'] = 30\n",
-    "D_params['label'] = 'stim' # 'stim' or 'choice'\n",
-    "D_params['units'] = 'all' # 'all' or 'exc' or 'inh'\n",
-    "D_params['pred'] = 'expected' # 'expected' or 'unexpected', trials had stim 0 or 1 dominant\n",
-    "\n",
-    "# Timing of task\n",
-    "task_info = {}\n",
-    "task_info['trials'] = 200\n",
-    "task_info['trial_dur'] = 250  # trial duration (timesteps)\n",
-    "task_info['stim_on'] = 80\n",
-    "task_info['stim_dur'] = 50\n",
-    "\n",
-    "# Load data\n",
-    "if sys.platform.startswith('linux'):\n",
-    "    data_dir = f\"/mnt/neurocube/local/serenceslab/holly/RNN_Geo/data/rdk_{RNN_params['prob_split']}_{RNN_params['afc']}afc/feedforward_only/{RNN_params['coh']}_coh\"\n",
-    "else:\n",
-    "    data_dir = f\"/Volumes/serenceslab/holly/RNN_Geo/data/rdk_{RNN_params['prob_split']}_{RNN_params['afc']}afc/feedforward_only/{RNN_params['coh']}_coh\"\n",
-    "\n",
-    "# Change this if we want a different number of trials and different default stim (0 is the one RNN was trained on)\n",
-    "if D_params['pred'] == 'expected':\n",
-    "    data_file = f\"{data_dir}/Trials{task_info['trials']}_0expected.npz\"\n",
-    "elif D_params['pred'] == 'unexpected':\n",
-    "    data_file = f\"{data_dir}/Trials{task_info['trials']}_1expected.npz\"\n",
-    "\n",
-    "# Chose the model\n",
-    "mat_files = [f for f in os.listdir(data_dir) if f.endswith('.mat')]# Get all the trained models (should be 40 .mat files)\n",
-    "model_path = os.path.join(data_dir, mat_files[1]) \n",
-    "model = loadmat(model_path) # model.keys()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 164,
-   "id": "316dae33-a0e3-49f0-824a-1c8054c73b73",
+   "execution_count": null,
+   "id": "47bee1e2-458b-4db8-8ccb-de76f755be5b",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "done decoding\n"
+      "done decoding afc:2 coh:hi\n",
+      "saved /Volumes/serenceslab/holly/RNN_Geo/data/rdk_70_30_2afc/feedforward_only/hi_coh/decode_T1000_model628_stim_expected_all.npz\n"
      ]
     }
    ],
    "source": [
-    "# Do decoding\n",
-    "acc = fnc_decode_L1(RNN_params, D_params, data_file, task_info, model)\n",
-    "print(f'done decoding')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 158,
-   "id": "4c0e857a-a97c-4cf2-a528-9c56ac887914",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Save to npz\n",
-    "full_file = os.path.join(data_dir, f\"decode_T{task_info['trials']}_{D_params['label']}_{D_params['pred']}_{D_params['units']}.npz\")\n",
-    "np.savez(full_file, decoding_acc = acc)"
+    "for c in cohs:\n",
+    "    for a in afcs:\n",
+    "        RNN_params = {}\n",
+    "        RNN_params['prob_split'] = '70_30'\n",
+    "        RNN_params['afc'] = a\n",
+    "        RNN_params['coh'] = c\n",
+    "        RNN_params['feedback'] = False\n",
+    "        RNN_params['thresh'] = [.3,.7]   \n",
+    "        D_params = {}\n",
+    "        D_params['time_avg'] = False\n",
+    "        D_params['t_win'] = [200,-1]\n",
+    "        D_params['n_cvs'] = 5\n",
+    "        D_params['num_cgs'] = 30\n",
+    "        D_params['label'] = 'stim' # 'stim' or 'choice'\n",
+    "        D_params['units'] = 'all' # 'all' or 'exc' or 'inh'\n",
+    "        D_params['pred'] = 'expected' # 'expected' or 'unexpected', trials had stim 0 or 1 dominant\n",
+    "        # Timing of task\n",
+    "        task_info = {}\n",
+    "        task_info['trials'] = 1000\n",
+    "        task_info['trial_dur'] = 250  # trial duration (timesteps)\n",
+    "        task_info['stim_on'] = 80\n",
+    "        task_info['stim_dur'] = 50\n",
+    "\n",
+    "        # Load data\n",
+    "        if sys.platform.startswith('linux'):\n",
+    "            data_dir = f\"/mnt/neurocube/local/serenceslab/holly/RNN_Geo/data/rdk_{RNN_params['prob_split']}_{RNN_params['afc']}afc/feedforward_only/{RNN_params['coh']}_coh\"\n",
+    "        else:\n",
+    "            data_dir = f\"/Volumes/serenceslab/holly/RNN_Geo/data/rdk_{RNN_params['prob_split']}_{RNN_params['afc']}afc/feedforward_only/{RNN_params['coh']}_coh\"\n",
+    "\n",
+    "        # Chose the model\n",
+    "        mat_files = [f for f in os.listdir(data_dir) if f.endswith('.mat')]# Get all the trained models (should be 40 .mat files)\n",
+    "        model_path = os.path.join(data_dir, mat_files[1]) \n",
+    "        model = loadmat(model_path) # model.keys()\n",
+    "        \n",
+    "        # Change this if we want a different number of trials and different default stim (0 is the one RNN was trained on)\n",
+    "        if D_params['pred'] == 'expected':\n",
+    "            data_file = f\"{data_dir}/Trials{task_info['trials']}_model{model_path[-7:-4]}_0expected.npz\"\n",
+    "        elif D_params['pred'] == 'unexpected':\n",
+    "            data_file = f\"{data_dir}/Trials{task_info['trials']}_model{model_path[-7:-4]}_1expected.npz\"\n",
+    "        \n",
+    "        # Do decoding\n",
+    "        acc = fnc_decode_L1(RNN_params, D_params, data_file, task_info, model)\n",
+    "        print(f\"done decoding afc:{RNN_params['afc']} coh:{RNN_params['coh']}\")\n",
+    "        \n",
+    "        # Save to npz\n",
+    "        full_file = os.path.join(data_dir, f\"decode_T{task_info['trials']}_model{model_path[-7:-4]}_{D_params['label']}_{D_params['pred']}_{D_params['units']}.npz\")\n",
+    "        np.savez(full_file, decoding_acc = acc)\n",
+    "        print(f\"saved {full_file}\")"
    ]
   },
   {
@@ -143,6 +127,7 @@
    "outputs": [],
    "source": [
     "# Make plots based on outputs\n",
+    "\n",
     "# Plot decoding accuracy over time\n",
     "plt.figure()\n",
     "plt.plot(range(task_info['trial_dur']), acc)\n",
