--- a/decode_L1.ipynb
+++ b/decode_L1.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "51c4374b-8268-4b40-b446-e2765b61a9a8",
    "metadata": {},
    "outputs": [],
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "d677ff57-73b5-49e2-897c-759d71f33b3a",
    "metadata": {},
    "outputs": [],
@@ -42,18 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "b4cfb003-4906-4e7e-943f-1b88c6e65250",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Change this\n",
-    "save_plt = True"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 10,
    "id": "b974490f-888e-41e9-8cdf-15bf74564495",
    "metadata": {},
    "outputs": [],
@@ -64,7 +53,7 @@
     "RNN_params = {}\n",
     "RNN_params['prob_split'] = '70_30'\n",
     "RNN_params['afc'] = 6\n",
-    "RNN_params['coh'] = 'lo'\n",
+    "RNN_params['coh'] = 'hi'\n",
     "RNN_params['feedback'] = False\n",
     "RNN_params['thresh'] = [.3,.7]\n",
     "\n",
@@ -76,11 +65,11 @@
     "D_params['num_cgs'] = 30\n",
     "D_params['label'] = 'stim' # 'stim' or 'choice'\n",
     "D_params['units'] = 'all' # 'all' or 'exc' or 'inh'\n",
-    "D_params['pred'] = 'expected' # 'expected' or 'unexpected', trials had stim 0 or 1 dominant\n",
+    "D_params['pred'] = 'unexpected' # 'expected' or 'unexpected', trials had stim 0 or 1 dominant\n",
     "\n",
     "# Timing of task\n",
     "task_info = {}\n",
-    "task_info['trials'] = 200\n",
+    "task_info['trials'] = 1000\n",
     "task_info['trial_dur'] = 250  # trial duration (timesteps)\n",
     "task_info['stim_on'] = 80\n",
     "task_info['stim_dur'] = 50\n",
@@ -91,21 +80,21 @@
     "else:\n",
     "    data_dir = f\"/Volumes/serenceslab/holly/RNN_Geo/data/rdk_{RNN_params['prob_split']}_{RNN_params['afc']}afc/feedforward_only/{RNN_params['coh']}_coh\"\n",
     "\n",
-    "# Change this if we want a different number of trials and different default stim (0 is the one RNN was trained on)\n",
-    "if D_params['pred'] == 'expected':\n",
-    "    data_file = f\"{data_dir}/Trials{task_info['trials']}_0expected.npz\"\n",
-    "elif D_params['pred'] == 'unexpected':\n",
-    "    data_file = f\"{data_dir}/Trials{task_info['trials']}_1expected.npz\"\n",
-    "\n",
     "# Chose the model\n",
     "mat_files = [f for f in os.listdir(data_dir) if f.endswith('.mat')]# Get all the trained models (should be 40 .mat files)\n",
-    "model_path = os.path.join(data_dir, mat_files[1]) \n",
-    "model = loadmat(model_path) # model.keys()\n"
+    "model_path = os.path.join(data_dir, mat_files[0]) \n",
+    "model = loadmat(model_path) # model.keys()\n",
+    "\n",
+    "# Change this if we want a different number of trials and different default stim (0 is the one RNN was trained on)\n",
+    "if D_params['pred'] == 'expected':\n",
+    "    data_file = f\"{data_dir}/Trials{task_info['trials']}_model{model_path[-7:-4]}_0expected.npz\"\n",
+    "elif D_params['pred'] == 'unexpected':\n",
+    "    data_file = f\"{data_dir}/Trials{task_info['trials']}_model{model_path[-7:-4]}_1unexpected.npz\"\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 11,
    "id": "316dae33-a0e3-49f0-824a-1c8054c73b73",
    "metadata": {},
    "outputs": [
@@ -125,13 +114,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 12,
    "id": "4c0e857a-a97c-4cf2-a528-9c56ac887914",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Save to npz\n",
-    "full_file = os.path.join(data_dir, f\"decode_T{task_info['trials']}_{D_params['label']}_{D_params['pred']}_{D_params['units']}.npz\")\n",
+    "full_file = os.path.join(data_dir, f\"decode_T{task_info['trials']}_model{model_path[-7:-4]}_{D_params['label']}_{D_params['pred']}_{D_params['units']}.npz\")\n",
     "np.savez(full_file, decoding_acc = acc)"
    ]
   },
@@ -143,6 +132,7 @@
    "outputs": [],
    "source": [
     "# Make plots based on outputs\n",
+    "save_plt = True\n",
     "# Plot decoding accuracy over time\n",
     "plt.figure()\n",
     "plt.plot(range(task_info['trial_dur']), acc)\n",
@@ -183,7 +173,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -197,7 +187,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
