--- a/decode_L1-loop.ipynb
+++ b/decode_L1-loop.ipynb
@@ -64,7 +64,11 @@
      "output_type": "stream",
      "text": [
       "done decoding afc:2 coh:hi\n",
-      "saved /Volumes/serenceslab/holly/RNN_Geo/data/rdk_70_30_2afc/feedforward_only/hi_coh/decode_T1000_model628_stim_expected_all.npz\n"
+      "saved /Volumes/serenceslab/holly/RNN_Geo/data/rdk_70_30_2afc/feedforward_only/hi_coh/decode_T1000_model628_stim_expected_all.npz\n",
+      "done decoding afc:6 coh:hi\n",
+      "saved /Volumes/serenceslab/holly/RNN_Geo/data/rdk_70_30_6afc/feedforward_only/hi_coh/decode_T1000_model536_stim_expected_all.npz\n",
+      "done decoding afc:2 coh:lo\n",
+      "saved /Volumes/serenceslab/holly/RNN_Geo/data/rdk_70_30_2afc/feedforward_only/lo_coh/decode_T1000_model325_stim_expected_all.npz\n"
      ]
     }
    ],
@@ -168,7 +172,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -182,7 +186,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
