--- a/decode_L1.ipynb
+++ b/decode_L1.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "id": "51c4374b-8268-4b40-b446-e2765b61a9a8",
    "metadata": {},
    "outputs": [],
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 16,
    "id": "d677ff57-73b5-49e2-897c-759d71f33b3a",
    "metadata": {},
    "outputs": [],
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 33,
    "id": "b974490f-888e-41e9-8cdf-15bf74564495",
    "metadata": {},
    "outputs": [],
@@ -53,7 +53,7 @@
     "RNN_params = {}\n",
     "RNN_params['prob_split'] = '70_30'\n",
     "RNN_params['afc'] = 6\n",
-    "RNN_params['coh'] = 'hi'\n",
+    "RNN_params['coh'] = 'lo'\n",
     "RNN_params['feedback'] = False\n",
     "RNN_params['thresh'] = [.3,.7]\n",
     "\n",
@@ -64,8 +64,8 @@
     "D_params['n_cvs'] = 5\n",
     "D_params['num_cgs'] = 30\n",
     "D_params['label'] = 'stim' # 'stim' or 'choice'\n",
-    "D_params['units'] = 'all' # 'all' or 'exc' or 'inh'\n",
-    "D_params['pred'] = 'unexpected' # 'expected' or 'unexpected', trials had stim 0 or 1 dominant\n",
+    "D_params['units'] = 'inh' # 'all' or 'exc' or 'inh'\n",
+    "D_params['pred'] = 'expected' # 'expected' or 'unexpected', trials had stim 0 or 1 dominant\n",
     "\n",
     "# Timing of task\n",
     "task_info = {}\n",
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 34,
    "id": "316dae33-a0e3-49f0-824a-1c8054c73b73",
    "metadata": {},
    "outputs": [
@@ -102,72 +102,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "done decoding\n"
+      "done decoding\n",
+      "done saving\n"
      ]
     }
    ],
    "source": [
     "# Do decoding\n",
     "acc = fnc_decode_L1(RNN_params, D_params, data_file, task_info, model)\n",
-    "print(f'done decoding')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "id": "4c0e857a-a97c-4cf2-a528-9c56ac887914",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "print(f'done decoding')\n",
     "# Save to npz\n",
     "full_file = os.path.join(data_dir, f\"decode_T{task_info['trials']}_model{model_path[-7:-4]}_{D_params['label']}_{D_params['pred']}_{D_params['units']}.npz\")\n",
-    "np.savez(full_file, decoding_acc = acc)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5856499d-4ba9-4056-ac3f-6363d2740189",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Make plots based on outputs\n",
-    "save_plt = True\n",
-    "# Plot decoding accuracy over time\n",
-    "plt.figure()\n",
-    "plt.plot(range(task_info['trial_dur']), acc)\n",
-    "plt.xlabel('Time Step')\n",
-    "plt.ylabel('Decoding Accuracy')\n",
-    "plt.title('Decoding Accuracy Over Time')\n",
-    "plt.axvspan(task_info['stim_on'], task_info['stim_on']+task_info['stim_dur'], color = 'gray', alpha = 0.3)\n",
-    "if save_plt:\n",
-    "    plt.savefig(f\"{data_dir}/decode_T{task_info['trials']}_{D_params['label']}_{D_params['pred']}.png\")\n",
-    "plt.show()  \n",
-    "\n",
-    "\n",
-    "# fit logistic function\n",
-    "def logistic_func(x, a, b, c, d):\n",
-    "    return a / (1 + np.exp(-c * (x - d))) + b\n",
-    "\n",
-    "popt, _ = curve_fit(logistic_func, range(0, task_info['trial_dur']), acc[0:])\n",
-    "\n",
-    "# 'popt' will contain the fitted parameters (a, b, c) of the log function\n",
-    "\n",
-    "# Optional: Estimate the y-value of the asymptote (assuming based on parameter b)\n",
-    "asymptote_y = popt[1]\n",
-    "print(\"Estimated y-value of the asymptote:\", asymptote_y)\n",
-    "\n",
-    "# Optional: Visualization\n",
-    "plt.plot(range(0, task_info['trial_dur']), acc[0:], label='Data')\n",
-    "plt.plot(range(0, task_info['trial_dur']), logistic_func(range(0, task_info['trial_dur']), *popt), label=f'y asymptote of logistic {round(asymptote_y, 3)}')\n",
-    "plt.axvspan(task_info['stim_on'], task_info['stim_on']+task_info['stim_dur'], color = 'gray', alpha = 0.3)\n",
-    "plt.xlabel('Time Step')\n",
-    "plt.ylabel('Decoding Accuracy')\n",
-    "plt.title('Decoding Accuracy Over Time (Logistic Fit)')\n",
-    "plt.legend()\n",
-    "if save_plt:\n",
-    "    plt.savefig(f\"{data_dir}/decode_T{task_info['trials']}_{D_params['label']}_{D_params['pred']}fit.png\")\n",
-    "plt.show()\n"
+    "np.savez(full_file, decoding_acc = acc)\n",
+    "print(f'done saving')"
    ]
   }
  ],
