--- a/decode_L1_expectedvsunexpected.ipynb
+++ b/decode_L1_expectedvsunexpected.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "000af540-4a71-4886-8250-9bdfbdfa74f0",
    "metadata": {},
    "outputs": [],
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "0210ed5e-58cc-4e61-a61a-8ae298c19094",
    "metadata": {},
    "outputs": [],
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "b585d928-bf9e-46a9-a2ba-d77873aa5bb4",
    "metadata": {},
    "outputs": [],
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": null,
    "id": "9a68920d-f067-4e10-a8f1-158f6f447bee",
    "metadata": {},
    "outputs": [],
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": null,
    "id": "15cbee79-c20b-42c8-bce0-55251828c482",
    "metadata": {},
    "outputs": [],
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": null,
    "id": "aa71bb43-ef63-455a-985c-11f09299351b",
    "metadata": {},
    "outputs": [],
@@ -190,41 +190,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": null,
    "id": "9638e824-67a4-4da0-9aca-c8a13bc7045e",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (2513807643.py, line 4)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  Cell \u001b[0;32mIn[67], line 4\u001b[0;36m\u001b[0m\n\u001b[0;31m    tmp2 = (start:)\u001b[0m\n\u001b[0m                 ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "tmp = sliding_window([1,2,3,4,5,6,7,8,9],2)\n",
-    "\n",
-    "for idx, (start, _) in enumerate(tmp):\n",
-    "    tmp2 = (start:)\n",
-    "    print(idx, tmp2)"
+    "tmp = sliding_window([1,2,3,4,5,6,7,8,9],2)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": null,
    "id": "3a855d1f-2c58-4e06-9cf8-798f988722ac",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "done decoding\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Do decoding\n",
     "if time_avg:\n",
@@ -303,51 +282,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": null,
    "id": "14bca2c5-131b-4461-a2de-1c3dd6809616",
    "metadata": {},
    "outputs": [],
    "source": [
     "plots = True"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 76,
-   "id": "29ece872-557a-4425-9649-b850df3dd34f",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "120"
-      ]
-     },
-     "execution_count": 76,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 78,
-   "id": "a35754da-aaf9-4683-a901-cbdb639d9ae9",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "170"
-      ]
-     },
-     "execution_count": 78,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": []
   },
   {
    "cell_type": "code",
