--- a/fnc_eval_model.ipynb
+++ b/fnc_eval_model.ipynb
@@ -12,7 +12,8 @@
     " Description: Implementation of rate model\n",
     "\n",
     "Adapted from .m to .ipynb by Holly Kular\\\n",
-    "date: 02-15-2024"
+    "date: 02-15-2024\n",
+    "update: 05-30-2024 added .item() to O[t] calculation to comply with numpy 1.25"
    ]
   },
   {
@@ -115,7 +116,7 @@
     "        X3[t, :] = next_x3.T\n",
     "        R3[t, :] = next_r3.T\n",
     "        \n",
-    "        O[t] = data['w_out'] @ R3[t, :].T + data['b_out'] # t:t+1\n",
+    "        O[t] = (data['w_out'] @ R3[t, :].T + data['b_out']).item() # t:t+1\n",
     "    \n",
     "    out = {}\n",
     "\n",
@@ -143,7 +144,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -157,7 +158,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
