--- a/generate_trials.ipynb
+++ b/generate_trials.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "8cb3d0a8-3df1-4528-97d5-1f58aa828384",
    "metadata": {
     "tags": []
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 49,
    "id": "db89de4a-c316-4a51-92aa-b38035d8c07c",
    "metadata": {
     "tags": []
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 64,
    "id": "7976c144-c21b-46ed-a802-0f5f756f2c36",
    "metadata": {
     "tags": []
@@ -58,14 +58,14 @@
     "# MODIFY HERE\n",
     "# what conditions were the RNNs trained on?\n",
     "prob_split = '70_30' # the probability of stimulus 1 vs all\n",
-    "afc = '6' # number of alternatives\n",
-    "coh = 'hi' # coherence\n",
+    "afc = '2' # number of alternatives\n",
+    "coh = 'lo' # coherence\n",
     "feedback = False # interlayer feedback (true or false)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 65,
    "id": "f1d1c2ef-004a-4c2c-8a0b-5fb51956d998",
    "metadata": {
     "tags": []
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 66,
    "id": "e806835c-613d-44aa-9f41-ac8d9b1d35ae",
    "metadata": {
     "tags": []
@@ -111,12 +111,12 @@
     "# Ex. Evenly distributed 6-AFC => task_info.primary_prob = 1/6;\n",
     "# Ex. pred=5 and primary_prob = 0.7 => stim \"5\" will be predominant (70% of the time)\n",
     "task_info['pred'] = 1 # predominant stimulus is \"1\"\n",
-    "task_info['primary_prob'] = 0.70; # 70-30 split"
+    "task_info['primary_prob'] = 1/int(afc); # 70-30 split"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 67,
    "id": "21389ae2-6159-4f55-bbc8-a25136a6beb1",
    "metadata": {
     "tags": []
@@ -156,13 +156,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 68,
    "id": "0ec6874e-4b69-4fb5-9fa8-f6dc484cacb2",
    "metadata": {},
    "outputs": [],
    "source": [
     "# save trial data to load into other notebooks\n",
-    "full_file = os.path.join(data_dir, f\"Trials{task_info['trials']}_model{model_path[-7:-4]}_{task_info['pred']}expected.npz\")\n",
+    "full_file = os.path.join(data_dir, f\"Trials{task_info['trials']}_model{model_path[-7:-4]}_balanced.npz\")\n",
     "np.savez(full_file,fr1 = fr1, fr2=fr2, fr3=fr3, outs=outs, labs=labs, task_info=task_info)"
    ]
   },
