--- a/fnc_eval_model.ipynb
+++ b/fnc_eval_model.ipynb
@@ -89,10 +89,10 @@
     "    for t in range(1, T+1):\n",
     "        if feedback:          \n",
     "            next_x1 = (1 - DeltaT / taus_sig1) * X1[t-1:t, :].T + \\\n",
-    "                (DeltaT / taus_sig1) * (ww1 @ R1[t-1:t, :].T + ww12 @ R2[t-1:t, :].T + data['w_in'] @ u[:, t-1:t]) + (np.random.randn(N1,1) / 10)\n",
+    "                (DeltaT / taus_sig1) * (ww1 @ R1[t-1:t, :].T + ww12 @ R2[t-1:t, :].T + data['w_in'] @ uu[:, t-1:t]) + (np.random.randn(N1,1) / 10)\n",
     "        else:\n",
     "            next_x1 = ((1 - DeltaT / taus_sig1) * X1[t-1:t, :].T) + \\\n",
-    "                (DeltaT / taus_sig1) * (ww1 @ R1[t-1:t, :].T + data['w_in'] @ u[:, t-1:t]) + (np.random.randn(N1,1) / 10)\n",
+    "                (DeltaT / taus_sig1) * (ww1 @ R1[t-1:t, :].T + data['w_in'] @ uu[:, t-1:t]) + (np.random.randn(N1,1) / 10)\n",
     "        next_r1 = 1 / (1 + np.exp(-next_x1))\n",
     "        \n",
     "        X1[t, :] = next_x1.T\n",
