--- a/fnc_generate_trials.ipynb
+++ b/fnc_generate_trials.ipynb
@@ -179,7 +179,7 @@
     "            stim_labs2[0, 1] = 1\n",
     "        else:\n",
     "            u[3, stim_on:stim_on+stim_dur+1] = -1\n",
-    "            stim_labs12[0, 1] = -1\n",
+    "            stim_labs2[0, 1] = -1\n",
     "            \n",
     "        lab['stim_mod1'] = stim_labs1\n",
     "        lab['stim_mod2'] = stim_labs2\n",
@@ -199,7 +199,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -213,7 +213,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
